<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Tweets</string>
    <string name="foo_label">\@foo</string>
    <string name="image">Tweet Image</string>
    <string name="profile">Profile</string>
    <string name="tweet_body">This is the tweet body</string>
    <string name="new_tweet">New Tweet</string>
    <string name="newTweetButton">Tweet</string>
    <string name="enter_new_tweet">Enter New Tweet</string>
    <string name="cancel">Cancel</string>
    <string name="userscreenname">Name</string>
    <string name="facebook_desc">Connect with Facebook</string>
    <string name="reply_button_label">Reply</string>
    <string name="retweet_button_label">Re-tweet</string>
    <string name="favorite_button_label">Favorite</string>
    <string name="why_not_email_title">Why not email?</string>
    <string name="search">Search</string>
    <string name="no_network_connection">No network connection</string>
    <string name="tweet">Tweet</string>
    <string name="login_body">
<![CDATA[
        Highlight is based on real identity and mutual friends. 
        Using these services allows us to show you how you\'re connected to the people around you. 
        It also makes it super easy to post to your Twitter timeline.
            ]]>
    </string>
    <string name="feedback_label">
<![CDATA[
        Please <a href="http://highlight.com">let us know</a> if you have feedback on this or if 
        you would like to log in with another identity service. Thanks!   
    ]]>
    </string>
    <string name="permission_label">We won\'t post things without your permission.</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_tweet_auto_link">TweetAutoLink</string>
    <string name="title_activity_tweets">TweetsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_add_tweet">AddTweet</string>
    <string name="title_activity_tweet_detail">TweetDetailActivity</string>

</resources>