<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/llTweetDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvUserName"
            style="@style/TextViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="4dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:text="Name" />

        <TextView
            android:id="@+id/tvBody"
            style="@style/TextViewBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvScreenName"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:autoLink="web"
            android:text="This is a text body" />

        <ImageView
            android:id="@+id/ivVerifiedStatus"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_alignTop="@+id/tvUserName"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/tvUserName"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvScreenName"
            style="@style/TextViewScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:maxLines="1"
            android:text="\@foo" />

        <TextView
            android:id="@+id/tvTimestamp"
            style="@style/TextViewTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvUserName"
            android:layout_alignParentRight="true"
            android:paddingRight="5dp"
            android:text="4h" />

        <ImageView
            android:id="@+id/ivEmbedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBody"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_launcher" />

        <Button
            android:id="@+id/btnReply"
            style="@style/ButtonAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivEmbedImage"
            android:layout_marginTop="5dp"
            android:text="@string/reply_button_label" />

        <View
            android:id="@+id/div1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/ivEmbedImage"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/btnReply"
            android:background="@color/black" />

        <Button
            android:id="@+id/btnRetweet"
            style="@style/ButtonAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivEmbedImage"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/div1"
            android:text="@string/retweet_button_label" />

        <View
            android:id="@+id/div2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/ivEmbedImage"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/btnRetweet"
            android:background="@color/black" />

        <Button
            android:id="@+id/btnFavorite"
            style="@style/ButtonAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivEmbedImage"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/div2"
            android:text="@string/favorite_button_label" />

        <TextView
            android:id="@+id/tvRetweetCount"
            style="@style/TextViewRetweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ivEmbedImage"
            android:paddingRight="5dp"
            android:text="retweets 0" />
    </RelativeLayout>

</ScrollView>